--- a/stileunico/stileunico/src/main/resources/application.properties
+++ b/stileunico/stileunico/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=adminsql
 spring.datasource.password=admin2233@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+server.port=${PORT:8080}
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
