--- a/stileunico/stileunico/src/main/resources/application.properties
+++ b/stileunico/stileunico/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=admin2233@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 server.port=${PORT:8080}
+jwt.secret=${JWT_SECRET}
 
 
 spring.jpa.hibernate.ddl-auto=update
